--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Material Admin - Compose mail</title>
+		<title>NoteApp</title>
 
 		<!-- BEGIN META -->
 		<meta charset="utf-8">
@@ -52,36 +52,17 @@
 						</li>
 					</ul>
 				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="headerbar-right">
-					<ul class="header-nav header-nav-options">
-						<!-- <li> -->
-							<!-- Search form -->
-							<!-- <form class="navbar-search" role="search">
-								<div class="form-group">
-									<input type="text" class="form-control" name="headerSearch" placeholder="Enter your keyword">
-								</div>
-								<button onclick="showCanvas()" class="btn btn-icon-toggle ink-reaction"><i class="fa fa-search"></i></button>
-							</form> -->
-						<!-- </li> -->
-						
-						
-					</ul><!--end .header-nav-options -->
+
 					<ul class="header-nav header-nav-profile">
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle ink-reaction" data-toggle="dropdown">
-								<img src="../../assets/img/prof.png" alt="" />
+								<img src="<%= avatar %>" alt="" />
 								<span class="profile-info">
 									<%= email %>
 								</span>
 							</a>
 							<ul class="dropdown-menu animation-dock">
-								<li class="dropdown-header">Config</li>
-								<li><a href="../../html/pages/profile.html">My profile</a></li>
-								<li><a href="../../html/pages/blog/post.html">My blog <span class="badge style-danger pull-right">16</span></a></li>
-								<li><a href="../../html/pages/calendar.html">My appointments</a></li>
-								<li class="divider"></li>
-								<li><a href="../../html/pages/locked.html"><i class="fa fa-fw fa-lock"></i> Lock</a></li>
 								<li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout</a></li>
 							</ul><!--end .dropdown-menu -->
 						</li><!--end .dropdown -->
