Correction de bugs
Delete Folder mechanism/ Form's Validation / Prevent token modification
/

--- a/views/log.ejs
+++ b/views/log.ejs
@@ -82,7 +82,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6 col-sm-offset-3 social-login">
-                        	<h3>Ou se connecter avec </h3>
+                        	<h3>Ou connectez-vous avec </h3>
                         	<div class="social-login-buttons">
 	                        	<a class="btn btn-link-2" href="/auth/facebook">
 	                        		<i class="fa fa-facebook"></i> Facebook
