Refactorisation du code
Split routes in mutiple files
Putting middleware in single files

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,6 +17,7 @@
 		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/font-awesome.min.css?1422529194" />
 		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/material-design-iconic-font.min.css?1421434286" />
 		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/libs/summernote/summernote.css?1425218701" />
+		<link rel="shortcut icon" href="assets/ico/favicon.png">
 
 		     <script type="text/javascript" src="main.js"></script> 
 		     
