--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,9 +17,29 @@
 		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/font-awesome.min.css?1422529194" />
 		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/material-design-iconic-font.min.css?1421434286" />
 		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/libs/summernote/summernote.css?1425218701" />
+		<link type="text/css" rel="stylesheet" href="/assets/css/theme-default/libs/dropzone/dropzone-theme.css?1424887864" />
 		<link rel="shortcut icon" href="assets/ico/favicon.png">
 
+
 		     <script type="text/javascript" src="main.js"></script> 
+		     <style type="text/css">
+		     .fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+		     </style>
 		     
 
 
@@ -58,13 +78,20 @@
 					<ul class="header-nav header-nav-profile">
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle ink-reaction" data-toggle="dropdown">
-								<img src="<%= avatar %>" alt="" />
+								<img id="avatar" src="<%= avatar %>" alt="" />
 								<span class="profile-info" account="<%= account_type %>">
 									<%= email %>
 								</span>
 							</a>
 							<ul class="dropdown-menu animation-dock">
-								<li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout</a></li>
+								<% if(account_type == 'local'){ %>
+								<li><a href="#"  id="uploadlink"><i class="fa fa-fw fa-user"></i> Changer sa photo de profil</a></li>
+
+								<!-- <span>Upload</span>
+						    <input type="file" class="upload" /> -->
+								<li class="divider"></li>
+								<% } %>
+								<li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout </a></li>
 							</ul><!--end .dropdown-menu -->
 						</li><!--end .dropdown -->
 					</ul><!--end .header-nav-profile -->
@@ -95,18 +122,43 @@
 					<!-- BEGIN INBOX -->
 					<div class="section-body">
 						<div class="row">
-
-							
-
-							<!-- BEGIN MAIL COMPOSE -->
 							<div class="col-lg-12"> 
 										<div class="input-group-content">
 												<input type="text" class="form-control" id="noteTitle" placeholder="Entrer le type de la note">
+
 												
 											</div>
+
 										<!-- <h1 id="noteTitle" class="no-margin">Reaching the top</h1> -->
+										<!-- <select class="form-control" id="sel1" >
+			            <option>1</option>
+			            <option>2</option>
+			            <option>3</option>
+			            <option>4</option>
+		          	</select> -->
+
 										<div class="btn-group stick-top-right">
+											<!-- <select class="btn ink-reaction btn-flat btn-primary " id="sel1" >
+									            <option>Option 1</option>
+									            <option>2</option>
+									            <option>3</option>
+									            <option>4</option>
+								          	</select> -->
+								          	<button type="button" class="btn ink-reaction btn-flat dropdown-toggle" data-toggle="dropdown">
+														Zoom up <i class="fa fa-caret-down text-default-light"></i>
+													</button>
+													<ul class="dropdown-menu animation-zoom" role="menu">
+														<li><a href="#">Add</a></li>
+														<li><a href="#">Edit</a></li>
+														<li><a href="#">Copy</a></li>
+														<li><a href="#">Print</a></li>
+														<li class="divider"></li>
+														<li><a href="#"><i class="fa fa-fw fa-times text-danger"></i> Remove item</a></li>
+													</ul>
+										
+											<a class="btn btn-icon-toggle btn-default" onclick="testf()" ><i class="fa md-android" ></i></a>
 											<a class="btn btn-icon-toggle btn-default" onclick="getFolderManageModal()" data-toggle="modal" data-target="#simpleModal"><i class="fa fa-folder" ></i></a>
+											
 											<a class="btn btn-icon-toggle btn-default" onclick="addNewNote()"><i class="md md-add"></i></a>
 											<a id="toastTest" class="btn btn-icon-toggle btn-default" onclick="deleteNote()"><i class="md md-delete"></i></a>
 											<a onclick="updateNote()"  class="btn btn-icon-toggle btn-default"><i class="md md-save"></i></a>
@@ -300,6 +352,52 @@
 		    </div>
 		</div>
 
+		<div class="modal fade" id="upload-modal" role="dialog">
+		    <div class="modal-dialog">
+		        <div class="modal-content">
+		        	<div class="modal-header">
+			          <button type="button" class="close" data-dismiss="modal">&times;</button>
+			          <h4 class="modal-title">Confirmation</h4>
+			        </div>
+
+			      <!--   <form action="/new" class="dropzone" id="my-awesome-dropzone">
+						<div class="dz-message">
+							<h3>Drop files here or click to upload.</h3>
+							<em>(This is just a demo dropzone. Selected files are <strong>not</strong> actually uploaded.)</em>
+						</div>
+					</form> -->
+					<div style="cursor:pointer;height:50px;">
+						<div class="fileUpload btn btn-primary">
+						    <span>Upload</span>
+						    <input type="file" id="uploadInput" class="upload" accept="image/*"/>
+						     <form id="uploadForm"
+						          enctype="multipart/form-data"
+						          action="/uploadProfilePicture"
+						          method="post">
+						      <input type="file" name="userPhoto" id="av" />
+						      <input type="submit" value="Upload Image" name="submit">
+						      <span id = "status"></span>
+						    </form>
+						</div>
+						<!-- <input type="file" style="visibility:hidden;" /> -->
+
+					</div>
+
+					 <div class="modal-footer">
+
+		                    
+		                    <button data-dismiss="modal" class="btn btn-danger" name="in_confirm_insert" id="bt_cancel">Non</button>
+		                    <button data-dismiss="modal" class="btn btn-primary" name="in_confirm_insert" id="bt_delete">Oui</button>
+
+		                </div>
+
+
+		        </div>
+		    </div>
+		</div>
+
+
+
 
 		<div class="modal fade" id="error-modal" role="dialog">
 		    <div class="modal-dialog">
@@ -319,7 +417,36 @@
 
 		                <div class="modal-footer">
 
-		                    <button data-dismiss="modal" class="btn btn-default" name="in_confirm_insertion" id="bt_cancelerror">Cancel</button>
+		                    <button data-dismiss="modal" class="btn btn-danger" name="in_confirm_insertion" id="bt_cancelerror">Fermer</button>
+
+		                </div>
+
+		            </form>
+
+		        </div>
+		    </div>
+		</div>
+
+
+				<div class="modal fade" id="error-save-modal" role="dialog">
+		    <div class="modal-dialog">
+		        <div class="modal-content">
+		        	<div class="modal-header">
+			          <button type="button" class="close" data-dismiss="modal">&times;</button>
+			          <h4 class="modal-title">Erreur</h4>
+			        </div>
+
+		            <form class="form-horizontal" method="post" id="error-form">
+
+
+		                <div class="modal-body">
+
+		                    Une erreur inattendue s'est produite
+		                </div>  
+
+		                <div class="modal-footer">
+
+		                    <button data-dismiss="modal" class="btn btn-danger" name="in_confirm_insertion" id="bt_cancelerror">Fermer</button>
 
 		                </div>
 
@@ -438,73 +565,72 @@
 		<script src="../../assets/js/core/source/AppVendor.js"></script>
 		<script src="../../assets/js/core/demo/Demo.js"></script>
 		<script src="../../assets/js/core/demo/DemoFormEditors.js"></script>
+		<script src="../../assets/js/libs/dropzone/dropzone.min.js"></script>
 	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 	   <script type="text/javascript">
 
-		     $('#mymodalForm input').on('change', function() {
-					//alert($('input[name="optionsRadios"]:checked', '#mymodalForm').val()); 
-					if($('input[name="optionsRadios"]:checked', '#mymodalForm').val() ==1) 
-					{
-						$('#foldername').prop("disabled", true);
-						$('#sel1').prop("disabled", false);
-						//$('#btSave').prop("disabled", false);
-					}
-					else{
-						$('#foldername').prop("disabled", false);
-						$('#sel1').prop("disabled", true);
-						//$('#btSave').prop("disabled", true);
+			$('#mymodalForm input').on('change', function() {
+				//alert($('input[name="optionsRadios"]:checked', '#mymodalForm').val()); 
+				if($('input[name="optionsRadios"]:checked', '#mymodalForm').val() ==1) 
+				{
+					$('#foldername').prop("disabled", true);
+					$('#sel1').prop("disabled", false);
+					//$('#btSave').prop("disabled", false);
+				}
+				else{
+					$('#foldername').prop("disabled", false);
+					$('#sel1').prop("disabled", true);
+					//$('#btSave').prop("disabled", true);
 
 
-					}
+				}
 			});
 		    
 
-		    
 
-	  //    	$("#foldername").keydown(function(event) {
-   //       		if($("#foldername").val()!=""){
-   //       			//console.log($("#foldername").val());
-   //       			$('#btSave').prop("disabled", false);
-   //       		}
-			// });
-//$(".gui-folder").find('li.active:first').children().trigger("click");
-$(document).ready(function() {
+			$(document).ready(function() {
 
-	$("#searchbtn").on('click', function() {
-   		search();
-	});
-    $(".gui-folder").find('li.active:first').children().trigger("click");
+				$("#searchbtn").on('click', function() {
+			   		search();
+				});
+				$("#uploadlink").on('click', function() {
+			   		$("#uploadInput").click();
+				});
 
-});
+				$("#uploadInput").change(function() {
+			 		uploadProfilePicture(this);
 
-$('#dSummernote').summernote({
-    height: 420,
-    placeholder: 'write here...',
-    onChange: test
-});
+				});
 
 
-function test()
-{
-	var attr = $("#noteTitle").attr("noteid");
-	if(typeof attr !== typeof undefined && attr !== false){
-		setTimeout(function () {
-		$("#saveMessage").empty();
-		$("#saveMessage").text("Enregistrement en cours ...");
-		//console.log($('#dSummernote').code());
-		autoSave();
-	}, 1000);
-	}
-	
-    
-}
+			    $(".gui-folder").find('li.active:first').children().trigger("click");
 
-// var minutes = 0.1, the_interval = minutes * 60 * 1000;
-// setInterval(function() {
-//   console.log("I am doing my 5 minutes check");
-//   // do your stuff here
-// }, the_interval);
+			});
+
+			$('#dSummernote').summernote({
+			    height: 420,
+			    placeholder: 'write here...',
+			    onChange: test
+			});
+
+
+			function test()
+			{
+				var attr = $("#noteTitle").attr("noteid");
+				if(typeof attr !== typeof undefined && attr !== false){
+					setTimeout(function () {
+					$("#saveMessage").empty();
+					$("#saveMessage").text("Enregistrement en cours ...");
+					//console.log($('#dSummernote').code());
+					autoSave();
+				}, 1000);
+				}
+				
+			    
+			}
+
+
 
      	</script> 
 
