--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
 		<link rel="shortcut icon" href="assets/ico/favicon.png">
 
 
-		     <script type="text/javascript" src="main.js"></script> 
+		     
 		     <style type="text/css">
 		     .fileUpload {
     position: relative;
@@ -98,6 +98,11 @@
 						<li>
 							<a class="btn btn-icon-toggle btn-default" href="#offcanvas-search" data-toggle="offcanvas" data-backdrop="false">
 								<i class="fa fa-search"></i>
+							</a>
+						</li>
+						<li>
+							<a class="btn btn-icon-toggle btn-default" href="#offcanvas-chat" data-toggle="offcanvas" data-backdrop="false">
+								<i class="md md-chat"></i>
 							</a>
 						</li>
 					</ul><!--end .header-nav-toggle -->
@@ -279,9 +284,54 @@
 				</div><!--end .offcanvas-pane -->
 				<!-- END OFFCANVAS SEARCH -->
 
+				<div id="offcanvas-chat" class="offcanvas-pane style-default-light width-12">
+					<div class="offcanvas-head style-default-bright">
+						<header class="text-primary">Chat with Ann Laurens</header>
+						<div class="offcanvas-tools">
+							<a class="btn btn-icon-toggle btn-default-light pull-right" data-dismiss="offcanvas">
+								<i class="md md-close"></i>
+							</a>
+							<a class="btn btn-icon-toggle btn-default-light pull-right" href="#offcanvas-search" data-toggle="offcanvas" data-backdrop="false">
+								<i class="md md-arrow-back"></i>
+							</a>
+						</div>
+						<form class="form">
+							<div class="form-group floating-label">
+								<textarea name="chatMessage" id="chatMessage" class="form-control autosize" rows="1"></textarea>
+								<label for="chatMessage">Leave a message</label>
+							</div>
+						</form>
+					</div>
+					<div class="offcanvas-body">
+						<ul class="list-chats">
+							<li>
+								<div class="chat">
+									<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar1.jpg?1403934956" alt="" /></div>
+									<div class="chat-body">
+										Yes, it is indeed very beautiful.
+										<small>10:03 pm</small>
+									</div>
+								</div><!--end .chat -->
+							</li>
+							<li class="chat-left">
+								<div class="chat">
+									<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar9.jpg?1404026744" alt="" /></div>
+									<div class="chat-body">
+										Did you see the changes?
+										<small>10:02 pm</small>
+									</div>
+								</div><!--end .chat -->
+							</li>
+							
+						</ul>
+					</div><!--end .offcanvas-body -->
+				</div><!--end .offcanvas-pane -->
+
 
 			</div><!--end .offcanvas-->
 			<!-- END OFFCANVAS RIGHT -->
+
+
 
 		</div><!--end #base-->
 		<!-- END BASE -->
@@ -423,7 +473,7 @@
 		</div>
 
 
-				<div class="modal fade" id="error-save-modal" role="dialog">
+		<div class="modal fade" id="error-save-modal" role="dialog">
 		    <div class="modal-dialog">
 		        <div class="modal-content">
 		        	<div class="modal-header">
@@ -453,7 +503,7 @@
 
 
 
-		  <div class="modal fade" id="chose-folder-modal" role="dialog">
+	  	<div class="modal fade" id="chose-folder-modal" role="dialog">
 		    <div class="modal-dialog">
 		    
 		      <!-- Modal content-->
@@ -493,7 +543,7 @@
 		      </div>
 		      
 		    </div>
-		  </div>
+	  	</div>
 
 
 		  <!-- BEGIN SIMPLE MODAL MARKUP -->
@@ -556,6 +606,7 @@
 		<script src="../../assets/js/libs/ckeditor/ckeditor.js"></script>
 		<script src="../../assets/js/libs/ckeditor/adapters/jquery.js"></script>
 		<script src="../../assets/js/libs/summernote/summernote.min.js"></script>
+		<script src="../../assets/js/libs/socket-io/socket.js"></script>
 		<script src="../../assets/js/core/source/App.js"></script>
 		<script src="../../assets/js/core/source/AppNavigation.js"></script>
 		<script src="../../assets/js/core/source/AppOffcanvas.js"></script>
@@ -566,7 +617,9 @@
 		<script src="../../assets/js/core/demo/Demo.js"></script>
 		<script src="../../assets/js/core/demo/DemoFormEditors.js"></script>
 		<script src="../../assets/js/libs/dropzone/dropzone.min.js"></script>
+		<script type="text/javascript" src="main.js"></script> 
 	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+	  	
 
 	   <script type="text/javascript">
 	   var timeOutFunction; // used to reset timer in the timeout function used for ajax request
@@ -591,6 +644,12 @@
 
 
 			$(document).ready(function() {
+				//var socket = io();
+				//console.log(socket);
+
+				$( "#chatMessage" ).keypress(function( e ) {
+					addChatMessageSender(e);
+				});
 
 				$("#searchbtn").on('click', function() {
 			   		search();
