--- a/views/main.ejs
+++ b/views/main.ejs
@@ -479,6 +479,23 @@
             </div>
          </div>
       </div>
+      <div class="modal fade" id="refreshDataModal" role="dialog">
+         <div class="modal-dialog">
+            <div class="modal-content">
+               <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Mise a jour du des données</h4>
+               </div>
+               <form class="form-horizontal" method="post" id="error-form">
+                  <div class="modal-body">
+                  </div>
+                  <div class="modal-footer">
+                     <button data-dismiss="modal" class="btn btn-danger" name="in_confirm_insertion" id="bt_cancelerror">Fermer</button>
+                  </div>
+               </form>
+            </div>
+         </div>
+      </div>
       <div class="modal fade" id="error-modal" role="dialog">
          <div class="modal-dialog">
             <div class="modal-content">
@@ -776,6 +793,10 @@
          	addChatMessageSender(e);
          });
 
+         $('#refreshDataModal ').on('hidden.bs.modal', function () {
+            location.reload();
+          });
+
          joinRoom(); // add user to the differents rooms to which he belongs to
          loadSharedNotes('byUser') //load shared notes' data
 
@@ -859,6 +880,8 @@
      }
 
 
+
+
      function save(e){
        //console.log(e);
        if (!($("#dSummernote").attr("collaborativeEditing")=="true")) {
@@ -905,6 +928,7 @@
      }
 
   }
+
 
       </script>
       <!-- END JAVASCRIPT -->
