Improvement of concurrent editing
Handling backspace and delete key

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -858,16 +858,33 @@
         }).on('keydown', function(e) {
           switch (e.key) {
             case "Tab":
-              console.log("Tab key has been hit");
+              var selection = document.getSelection();
+              var cursorPos = selection.anchorOffset;
+              var oldContent = selection.anchorNode.nodeValue;
+              var newContent = oldContent.substring(0, cursorPos) + oldContent.substring(cursorPos+1);
+              console.log("Tab key has been hit at position "+cursorPos);
+              specialCharacterSave("Tab",cursorPos);
               break;
             case "enter":
               console.log("enter key has been hit");
               break;
             case "Backspace":
-              console.log("Backspace key has been hit");
+              var selection = document.getSelection();
+              var cursorPos = selection.anchorOffset;
+              var oldContent = selection.anchorNode.nodeValue;
+              var newContent = oldContent.substring(0, cursorPos-1) + oldContent.substring(cursorPos);
+              // console.log("Backspace key has been hit at position "+cursorPos);
+              // console.log("newContent",newContent);
+              specialCharacterSave("Backspace",cursorPos);
               break;
             case "Delete":
-              console.log("Delete key has been hit");
+              var selection = document.getSelection();
+              var cursorPos = selection.anchorOffset;
+              var oldContent = selection.anchorNode.nodeValue;
+              var newContent = oldContent.substring(0, cursorPos) + oldContent.substring(cursorPos+1);
+              // console.log("Delete key has been hit at position "+cursorPos);
+              // console.log("newContent",newContent);
+              specialCharacterSave("Delete",cursorPos);
               break;
             default:
             //console.log("key",e.key);
@@ -887,7 +904,7 @@
 
 
 
-  
+
 
 
       </script>
