--- a/views/main.ejs
+++ b/views/main.ejs
@@ -38,6 +38,22 @@
          padding: 0px !important;
          }
 
+         .noselect {
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none;   /* Chrome/Safari/Opera */
+            -khtml-user-select: none;    /* Konqueror */
+            -moz-user-select: none;      /* Firefox */
+            -ms-user-select: none;       /* Internet Explorer/Edge */
+            user-select: none;           /* Non-prefixed version, currently
+                                            not supported by any browser */
+          }
+
+          .chat-avatar{
+            width: 40px;
+            height: 40px;
+            border-radius: 40px;
+          }
+
 
 
          @media screen and (min-width: 768px) {
